@@ -53,7 +53,7 @@ type expression =
   | Exchange of expression * expression * MemOrderOrAnnot.t
   | Fetch of expression * Op.op * expression * mem_order
   | ECall of string * expression list
-
+  | ECas of expression * expression * expression * mem_order * mem_order * bool
 
 type mutex_kind = MutexLinux | MutexC11
 
@@ -80,7 +80,10 @@ let dump_op =
     | And -> "and"
     | _ -> assert false
 
-
+let dump_ws = function
+  | true  -> "strong"
+  | false -> "weak"
+        
 let rec dump_expr =
   let open MemOrderOrAnnot in
   function
@@ -107,6 +110,17 @@ let rec dump_expr =
 	  (MemOrder.pp_mem_order mo)
     | ECall(f,es) ->
         sprintf "%s(%s)" f (dump_args es)
+
+    | ECas(e1,e2,e3,MemOrder.SC,MemOrder.SC,strong) ->
+        sprintf "atomic_compare_exchange_%s(%s,%s,%s)"
+          (dump_ws strong)
+          (dump_expr e1) (dump_expr e2) (dump_expr e3)
+
+    | ECas(e1,e2,e3,mo1,mo2,strong) ->
+        sprintf "atomic_compare_exchange_%s_explicit(%s,%s,%s,%s,%s)"
+          (dump_ws strong)
+          (dump_expr e1) (dump_expr e2) (dump_expr e3)
+	  (MemOrder.pp_mem_order mo1) (MemOrder.pp_mem_order mo2)
 
 and dump_args es = String.concat "," (List.map dump_expr es)
 
@@ -161,72 +175,80 @@ let norm_ins ins = ins
 let get_next _ins = Warn.fatal "C get_next not implemented"
 
 include Pseudo.Make
-	  (struct
-	    type ins = instruction
-	    type pins = parsedInstruction
-	    type reg_arg = reg
+    (struct
+      type ins = instruction
+      type pins = parsedInstruction
+      type reg_arg = reg
 
-	    let rec parsed_expr_tr = function
-	      | Const(Constant.Concrete _) as k -> k 
-	      | Const(Constant.Symbolic _) -> 
-		 Warn.fatal "No constant variable allowed"
-	      | LoadReg _ as l -> l
-              | LoadMem (l,mo) ->
-                  LoadMem (parsed_expr_tr l,mo)
-	      | Op(op,e1,e2) -> Op(op,parsed_expr_tr e1,parsed_expr_tr e2)
-	      | Exchange(l,e,mo) ->
-                  Exchange(parsed_expr_tr l,parsed_expr_tr e,mo)
-	      | Fetch(l,op,e,mo) ->
-                  Fetch(parsed_expr_tr l,op,parsed_expr_tr e,mo)
-              | ECall (f,es) -> ECall (f,List.map parsed_expr_tr es)
+      let rec parsed_expr_tr = function
+	| Const(Constant.Concrete _) as k -> k 
+	| Const(Constant.Symbolic _) -> 
+	    Warn.fatal "No constant variable allowed"
+	| LoadReg _ as l -> l
+        | LoadMem (l,mo) ->
+            LoadMem (parsed_expr_tr l,mo)
+	| Op(op,e1,e2) -> Op(op,parsed_expr_tr e1,parsed_expr_tr e2)
+	| Exchange(l,e,mo) ->
+            Exchange(parsed_expr_tr l,parsed_expr_tr e,mo)
+	| Fetch(l,op,e,mo) ->
+            Fetch(parsed_expr_tr l,op,parsed_expr_tr e,mo)
+        | ECall (f,es) -> ECall (f,List.map parsed_expr_tr es)
+        | ECas (e1,e2,e3,mo1,mo2,strong) ->
+            ECas
+              (parsed_expr_tr e1,parsed_expr_tr e2,parsed_expr_tr e3,
+               mo1,mo2,strong)
 
-	    and parsed_tr = function
-	      | Fence _ as f -> f
-	      | Seq(li) -> Seq(List.map parsed_tr li)
-	      | If(e,it,ie) -> 
-		 let tr_ie = match ie with
-		   | None -> None
-		   | Some ie -> Some(parsed_tr ie) in
-		 If(parsed_expr_tr e,parsed_tr it,tr_ie)
-	      | StoreReg(l,e) -> StoreReg(l,parsed_expr_tr e)
-	      | StoreMem(l,e,mo) ->
-                  StoreMem(parsed_expr_tr l,parsed_expr_tr e,mo)
-	      | Lock _ | Unlock _ as i -> i
-	      | Symb _ -> Warn.fatal "No term variable allowed"
-              | PCall (f,es) -> PCall (f,List.map parsed_expr_tr es)
+      and parsed_tr = function
+	| Fence _ as f -> f
+	| Seq(li) -> Seq(List.map parsed_tr li)
+	| If(e,it,ie) -> 
+	    let tr_ie = match ie with
+	    | None -> None
+	    | Some ie -> Some(parsed_tr ie) in
+	    If(parsed_expr_tr e,parsed_tr it,tr_ie)
+	| StoreReg(l,e) -> StoreReg(l,parsed_expr_tr e)
+	| StoreMem(l,e,mo) ->
+            StoreMem(parsed_expr_tr l,parsed_expr_tr e,mo)
+	| Lock _ | Unlock _ as i -> i
+	| Symb _ -> Warn.fatal "No term variable allowed"
+        | PCall (f,es) -> PCall (f,List.map parsed_expr_tr es)
 
-	    let get_naccesses =
+      let get_naccesses =
 
-              let rec get_exp k = function
-                | Const _ -> k
-                | LoadReg _ -> k
-                | LoadMem (e,_) -> get_exp (k+1) e
-                | Op (_,e1,e2) -> get_exp (get_exp k e1) e2
-                | Fetch (loc,_,e,_)
-                | Exchange (loc,e,_) -> get_exp (get_exp (k+2) e) loc
-                | ECall (_,es) -> List.fold_left get_exp k es in
+        let rec get_exp k = function
+          | Const _ -> k
+          | LoadReg _ -> k
+          | LoadMem (e,_) -> get_exp (k+1) e
+          | Op (_,e1,e2) -> get_exp (get_exp k e1) e2
+          | Fetch (loc,_,e,_)
+          | Exchange (loc,e,_) -> get_exp (get_exp (k+2) e) loc
+          | ECall (_,es) -> List.fold_left get_exp k es
+          | ECas (e1,e2,e3,_,_,_) ->
+              let k = get_exp k e1 in
+              let k = get_exp k e2 in
+              get_exp k e3 in
+        
+        let rec get_rec k = function
+          | Fence _|Symb _-> k
+          | Seq seq -> List.fold_left get_rec k seq
+          | If (cond,ifso,ifno) ->
+              let k = get_exp k cond in
+              get_opt (get_rec k ifso) ifno
+          | StoreReg (_,e) -> get_exp k e
+          | StoreMem (loc,e,_) -> get_exp (get_exp k loc) e
+          | Lock (e,_)|Unlock (e,_) -> get_exp (k+1) e
+          | PCall (_,es) ->  List.fold_left get_exp k es
 
-              let rec get_rec k = function
-                | Fence _|Symb _-> k
-                | Seq seq -> List.fold_left get_rec k seq
-                | If (cond,ifso,ifno) ->
-                    let k = get_exp k cond in
-                    get_opt (get_rec k ifso) ifno
-                | StoreReg (_,e) -> get_exp k e
-                | StoreMem (loc,e,_) -> get_exp (get_exp k loc) e
-                | Lock (e,_)|Unlock (e,_) -> get_exp (k+1) e
-                | PCall (_,es) ->  List.fold_left get_exp k es
+        and get_opt k = function
+          | None -> k
+          | Some i -> get_rec k i in
 
-              and get_opt k = function
-                | None -> k
-                | Some i -> get_rec k i in
-
-              fun i -> get_rec 0 i
+        fun i -> get_rec 0 i
 
 
-	    let fold_labels acc _f _ins = acc
-	    let map_labels _f ins = ins
-	  end)
+      let fold_labels acc _f _ins = acc
+      let map_labels _f ins = ins
+    end)
 
 let get_macro _s = assert false
 
@@ -277,7 +299,11 @@ let rec subst_expr env e = match e with
     let xs,e = find_macro f env.expr in
     let frame = build_frame f (subst_expr env) xs es in 
     subst_expr { env with args = frame; } e
-
+| ECas (e1,e2,e3,mo1,mo2,strong) ->
+    let e1 = subst_expr env e1
+    and e2 = subst_expr env e2
+    and e3 = subst_expr env e3 in
+    ECas (e1,e2,e3,mo1,mo2,strong)
     
 let rec subst env i = match i with
 | Fence _|Symb _ -> i
