@@ -52,7 +52,7 @@ open MemOrderOrAnnot
 %nonassoc LOWER_THAN_ELSE
 %nonassoc ELSE
 %token <MemOrder.t> MEMORDER
-%token LD LD_EXPLICIT ST ST_EXPLICIT EXC EXC_EXPLICIT FENCE LOCK UNLOCK SPINLOCK SPINUNLOCK SCAS WCAS
+%token LD LD_EXPLICIT ST ST_EXPLICIT EXC EXC_EXPLICIT FENCE LOCK UNLOCK SPINLOCK SPINUNLOCK SCAS WCAS SCAS_EXPLICIT WCAS_EXPLICIT
 %token LOAD STORE UNDERFENCE XCHG
 %token <Op.op> ATOMIC_FETCH
 %token <Op.op> ATOMIC_FETCH_EXPLICIT
@@ -164,6 +164,10 @@ expr:
   { Fetch($3, $1, $5, $7) }
 | IDENTIFIER LPAR args RPAR
   { ECall ($1,$3) }
+| WCAS LPAR expr COMMA expr COMMA expr RPAR
+  { ECas ($3,$5,$7,SC,SC,false) }
+| SCAS LPAR expr COMMA expr COMMA expr RPAR
+  { ECas ($3,$5,$7,SC,SC,true) }
 
 args:
 | { [] }
